TAG: egload-tr9773-2
DATE: 02/17/2010
STAFF: sc
CHANGES: MGI 4.33 TR9773 Links to Gene Model Evidence
1) egload.sh - updated to use checkStatus function
2) radarPreprocess.sh - tweaked to include only C57 reference genome
3) The following classes need to be updated when added a new sequence
   'type' e.g. NT and NW refseqs:
a) java/org/jax/mgi/app/entrezGene/AccessionClassifier.java
   Add Pattern and Matcher and Matcher.find()
b) java/org/jax/mgi/app/entrezGene/Constants.java
   Add NT and NW Constants 
c) java/org/jax/mgi/app/entrezGene/EntrezGeneBucketizable.java
   Add NT and NW to svaNames
   Add get/add NT/NW sequence methods
d) java/org/jax/mgi/app/entrezGene/EntrezGeneBucketizer.java
   Add NT/NW to createAssociations method
e) java/org/jax/mgi/app/entrezGene/EntrezGeneLoader.java
   Add NT/NW to sequenceGroups array
f) java/org/jax/mgi/dbs/mgd/query/MGIMarkerQuery.java
   Add NT/NW to interpret method
g) java/org/jax/mgi/dbs/rdr/query/EntrezGeneQuery.java
   Add NT/NW to storeSequence method
   Add getNT/getNW method
   Add NT/NW to getAllRefSeqSequences method

TAG: egload-tr9773-1
DATE: 02/08/2010
STAFF: sc
CHANGES:
1) initial commit of radarPreprocess.py (.sh)
2) egload.config.default added UPDATE_FILE setting

TAG: egload-tr9773-BP
DATE: 02/08/2010
STAFF: sc
CHANGES: Branch Point tag for MGI4.33

TAG: egload-4-1-1-1
DATE: 08/01/2008
STAFF: sc
CHANGES: merged tr8543_3 to trunk

TAG: egload-tr8543_3-2
TAG: egload-tr8543_3-1
DATE: 07/17/2008
STAFF: sc
CHANGES:
1) Removed: GUIdsLookup and GUQuery
2) Added html formatting of NCBI Gene Model IDs no longer in EG
3) Removed MGIMarkerQuery.MGIMarker attributes which can now be just 
     bucketized attributes
4) Same as above for EntrezGeneQuery
5) EntrezGeneBucketizer - more comments, slight change to  GMs with no 
     EntrezGene Id report
6) added new report to index.html
7) renamed creatSeqeunceAssociations to createAssociations because
     it does homologene group ids too